manifests/gogs/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogs
  namespace: gogs
  labels:
    app: gogs
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: gogs
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gogs
  namespace: gogs
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gogs
    spec:
      containers:
      - name: gogs
        image: gogs/gogs 
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
