manifests/gogs/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gogs
  namespace: gogs
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - git.satanic.link
    secretName: gogs-tls
  rules:
  - host: git.satanic.link
    http:
      paths:
      - path: /
        backend:
          serviceName: gogs
          servicePort: 80
